fixed record line overflow

--- a/client/src/css/calendar/calendar.css
+++ b/client/src/css/calendar/calendar.css
@@ -403,17 +403,7 @@ td.fc-event-container a {
         text-align: center;
         align-content: center;
     }
-    
-    .timer {
-        position: fixed;
-        top: 0;
-        color: #209CEE;
-        background-color: gold;
-        font-weight: bolder;
-        margin-bottom: 10px;
-        min-width: 80%;
-        margin-left: 10%;
-    }
+
 }
 
 @media (min-width: 760px)and (max-width: 775px) {
